--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,8 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.scss"
+              "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
+              "node_modules/@progress/kendo-theme-default/dist/all.css"
             ],
             "scripts": []
           },
