--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ctty-monitors",
+  "name": "cone_fe",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,6 +18,12 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@progress/kendo-angular-charts": "^17.1.1",
+    "@progress/kendo-angular-gauges": "^17.1.1",
+    "@progress/kendo-angular-intl": "^17.1.1",
+    "@progress/kendo-angular-l10n": "^17.1.1",
+    "@progress/kendo-licensing": "^1.3.5",
+    "@progress/kendo-theme-default": "^10.0.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "rxjs": "~7.8.0",
@@ -28,6 +34,7 @@
     "@angular-devkit/build-angular": "^18.2.5",
     "@angular/cli": "^18.2.5",
     "@angular/compiler-cli": "^18.2.0",
+    "@angular/localize": "^18.2.13",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
