--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/cli": "^18.2.5",
     "@angular/compiler-cli": "^18.2.0",
     "@angular/localize": "^18.2.13",
+    "@ngx-env/builder": "^19.0.4",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
