--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@progress/kendo-theme-default": "^10.0.1",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "echarts": "^5.5.1",
+    "ngx-echarts": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
