--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BASE_URL = http://localhost:4200
+BASE_URL ="http://localhost:4200"
+API_URL = "https://testinvictaapi.continualengine.com/continually"
