--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@auth0/angular-jwt": "^5.2.0",
     "@progress/kendo-angular-charts": "^17.1.1",
     "@progress/kendo-angular-gauges": "^17.1.1",
     "@progress/kendo-angular-intl": "^17.1.1",
