--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@progress/kendo-angular-l10n": "^17.1.1",
     "@progress/kendo-licensing": "^1.3.5",
     "@progress/kendo-theme-default": "^10.0.1",
+    "@swimlane/ngx-datatable": "^20.1.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "echarts": "^5.5.1",
