--- a/package.json
+++ b/package.json
@@ -11,18 +11,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
+    "@angular/cdk": "^17.0.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^17.0.0",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@auth0/angular-jwt": "^5.2.0",
     "@progress/kendo-angular-charts": "^17.1.1",
+    "@progress/kendo-angular-common": "^17.1.1",
     "@progress/kendo-angular-gauges": "^17.1.1",
+    "@progress/kendo-angular-grid": "^17.1.1",
     "@progress/kendo-angular-intl": "^17.1.1",
     "@progress/kendo-angular-l10n": "^17.1.1",
+    "@progress/kendo-drawing": "^1.21.2",
     "@progress/kendo-licensing": "^1.3.5",
     "@progress/kendo-theme-default": "^10.0.1",
     "@swimlane/ngx-datatable": "^20.1.0",
