--- a/package.json
+++ b/package.json
@@ -21,18 +21,11 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@auth0/angular-jwt": "^5.2.0",
-    "@progress/kendo-angular-charts": "^17.1.1",
-    "@progress/kendo-angular-common": "^17.1.1",
-    "@progress/kendo-angular-gauges": "^17.1.1",
-    "@progress/kendo-angular-grid": "^17.1.1",
-    "@progress/kendo-angular-intl": "^17.1.1",
-    "@progress/kendo-angular-l10n": "^17.1.1",
-    "@progress/kendo-drawing": "^1.21.2",
-    "@progress/kendo-licensing": "^1.3.5",
-    "@progress/kendo-theme-default": "^10.0.1",
+    "@progress/kendo-angular-common": "^17.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "echarts": "^5.5.1",
+    "jwt-decode": "^4.0.0",
     "ngx-echarts": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
