--- a/angular.json
+++ b/angular.json
@@ -41,9 +41,7 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
-              "https://fonts.googleapis.com/icon?family=Material+Icons",
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "node_modules/bootstrap-icons/font/bootstrap-icons.scss"
             ],
             "scripts": []
           },
