--- a/angular.json
+++ b/angular.json
@@ -42,7 +42,7 @@
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
-              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.scss"
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
             ],
             "scripts": []
           },
